--- a/styles.css
+++ b/styles.css
@@ -20,17 +20,18 @@
   position: relative;
   /* padding: 20px; */
 }
+
 .faq-icon {
   position: absolute;
-  left: 95%;
+  left: 93.5%;
   /* top: 50px; */
   transform: translateY(-50%);
   font-size: 20px;
   cursor: pointer;
   background: #ffffff;
   color: rgb(0, 0, 0);
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -38,14 +39,31 @@
   border-color: #e51a1a;
   border-width: 1px;
   box-shadow: 1px 1px 10px #000000;
+
+
+  /* -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none; */
+
+
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
 }
+
 .faq-box {
   /* overflow:visible; */
-  z-index: 9999; 
+  z-index: 9999;
   display: none;
   position: absolute;
   right: 6%;
-  top: 80px;
+  top: 50px;
   transform: translateY(-50%);
   background: rgba(0, 0, 0, 0.678);
   color: #ffffff;
@@ -56,7 +74,7 @@
   box-shadow: 1px 1px 10px black;
   font-size: small;
 
-  
+
 }
 
 /* width: 120px;
@@ -134,7 +152,7 @@ body {
   /* Higher z-index for the navbar */
   overflow: visible !important;
   /* Critical: allows dropdowns to extend outside */
-  
+
 }
 
 /* Navigation links */
@@ -148,7 +166,7 @@ body {
   padding: 10px 15px;
   font-size: 17px;
   white-space: nowrap;
-  
+
 }
 
 /* Hover effect */
