--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ td {
 /* TOP BAR CSS [ 1 ] */
 /* Reset margin and font */
 body {
-  background-color: 	#FAF9F6;
+  background-color: #FAF9F6;
   margin: 0;
   font-size: large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -222,7 +222,7 @@ body {
 
 .topnav-2 {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   background-color: #33333300;
   color: #000000;
   min-height: 50px;
@@ -329,17 +329,17 @@ body {
   display: none;
   position: absolute;
   right: 0;
-  /* Align to the right side of the button */
   left: auto;
-  /* Override default left alignment */
   background-color: #00000000;
   color: #000000;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  /* z-index: 1; */
   border-radius: 4px;
   overflow-y: scroll;
-
+  max-height: 0;
+  /* overflow: hidden; */
+  background-color: white;
+  transition: max-height 0.3s ease;
 
 }
 
@@ -932,22 +932,29 @@ now Browse Curated Resources*/
 /*BOTTOM BAR CSS*/
 
 .navbar-5 {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #333; /* Example background, adjust as needed */
-    color: white;
-    text-align: center;
-    padding: 10px 0px 15px 0px; /* Add some padding to prevent text from touching edges */
-    box-sizing: border-box; /* Crucial for responsive sizing with padding */
-    z-index: 1000; /* Ensure it stays on top of other content */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  /* Example background, adjust as needed */
+  color: white;
+  text-align: center;
+  padding: 10px 0px 15px 0px;
+  /* Add some padding to prevent text from touching edges */
+  box-sizing: border-box;
+  /* Crucial for responsive sizing with padding */
+  z-index: 1000;
+  /* Ensure it stays on top of other content */
 }
 
 .navbar-5 p {
-    margin: 0; /* Remove default paragraph margin */
-    white-space: normal; /* Allow text to wrap naturally */
-    word-wrap: break-word; /* Ensure long words break */
+  margin: 0;
+  /* Remove default paragraph margin */
+  white-space: normal;
+  /* Allow text to wrap naturally */
+  word-wrap: break-word;
+  /* Ensure long words break */
 }
 
 
