--- a/css/academics.menubtn.css
+++ b/css/academics.menubtn.css
@@ -91,7 +91,7 @@
             background-color: #00000000;
             border-radius: 8px;
             padding: 12px;
-            position: relative;
+            /* position: relative; */
 
             cursor: pointer;
             display: flex;
