--- a/css/top.navbar.css
+++ b/css/top.navbar.css
@@ -11,10 +11,17 @@
 
   /* Navigation bar styles */
   .navbar {
-      background-color: #03030300;
+      /* background-color: #03030300; */
+      background-color: #ffffff00;
       color: black;
-      width: 100%;
-      position: sticky;
+      width: -webkit-fill-available;
+      /* width: 100%; */
+      border-radius: 20px 20px 0 0;
+      position: fixed;
+      /* margin-top: 20px; */
+      margin-left: 20px;
+      margin-right: 20px;
+      /* padding-top: 10px; */
       top: 0;
       left: 0;
       z-index: 1;
@@ -22,14 +29,36 @@
       /* padding: 5%; */
   }
 
-  .nav-container {
+  /* .nav-container {
+    margin-top: 20px;
       max-width: 1200px;
       margin: 0 auto;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 0;
+  } */
+
+  #nav-container {
+      /* margin-top: 20px; */
+      max-width: 1200px;
+      
+      margin: 0 auto;
+      margin-top: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
   }
+
+  #nav-container.scrolled {
+     position: fixed;
+     /* top: -200px !important; */
+     margin-top: 0 !important;
+     background-color: red !important;
+  }
+
+
 
   .nav-links {
       display: flex;
@@ -46,7 +75,7 @@
       text-align: center;
       transition: background-color 0.3s ease;
       border-radius: 5px;
-      
+
   }
 
   .nav-links li a:hover {
@@ -132,11 +161,11 @@
           justify-content: flex-end;
           align-items: center;
           z-index: 1000px;
-          
-          
+
+
       }
 
-    
+
 
       .nav-container {
           flex-direction: column;
