--- a/css/academics.menubtn.css
+++ b/css/academics.menubtn.css
@@ -90,14 +90,16 @@
         .menu-button {
             background-color: #00000000;
             border-radius: 8px;
-           
-            /* padding: 12px; */
-            /* position: relative; */
+           /* width: 100px !important; */
+           width: -webkit-fill-available !important;
 
-            cursor: pointer;
+           display: grid;
+           grid-template-columns:repeat();
+            /* cursor: pointer;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            flex-wrap: wrap;
+            justify-content: center; */
             align-items: center;
             gap: 5px;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
