--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ a {
 /* TOP BAR CSS [ 1 ] */
 /* Reset margin and font */
 body {
-  background-color: 	#FAF9F6;
+  background-color: #FAF9F6;
   margin: 0;
   font-size: large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -818,22 +818,29 @@ now Browse Curated Resources*/
 /*BOTTOM BAR CSS*/
 
 .navbar-5 {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #333; /* Example background, adjust as needed */
-    color: white;
-    text-align: center;
-    padding: 10px 0px 15px 0px; /* Add some padding to prevent text from touching edges */
-    box-sizing: border-box; /* Crucial for responsive sizing with padding */
-    z-index: 1000; /* Ensure it stays on top of other content */
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  /* Example background, adjust as needed */
+  color: white;
+  text-align: center;
+  padding: 10px 0px 15px 0px;
+  /* Add some padding to prevent text from touching edges */
+  box-sizing: border-box;
+  /* Crucial for responsive sizing with padding */
+  z-index: 1000;
+  /* Ensure it stays on top of other content */
 }
 
 .navbar-5 p {
-    margin: 0; /* Remove default paragraph margin */
-    white-space: normal; /* Allow text to wrap naturally */
-    word-wrap: break-word; /* Ensure long words break */
+  margin: 0;
+  /* Remove default paragraph margin */
+  white-space: normal;
+  /* Allow text to wrap naturally */
+  word-wrap: break-word;
+  /* Ensure long words break */
 }
 
 
@@ -909,5 +916,11 @@ now Browse Curated Resources*/
   .topnav-2 a {
     padding: 8px 12px;
     font-size: 14px;
+  }
+
+
+  .randomBS {
+    display: block !important;
+    margin-bottom: 100px !important;
   }
 }
