--- a/css/References.css
+++ b/css/References.css
@@ -84,7 +84,7 @@ td {
 
 .university-resources {
     /* margin: 2rem auto; */
-    max-width: 1200px;
+    max-width: 800px;
     /* padding: 0 1rem; */
     /* z-index: -1; */
     /* overflow-x: scroll; */
@@ -101,35 +101,40 @@ td {
 .table-container {
     overflow-x: auto;
     display: flex;
-    justify-content: center;
+    justify-content:center;
+    margin: auto;
+    max-width: 800px;
     /* z-index: -1 !important; */
     position: static;
     background: white;
-    border-radius: 8px;
+    border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
      /* direction:rtl !important;
     direction: ltr !important; */
+  
     
 }
 
 table,th,td{
-     border: 1px solid rgba(0, 0, 0, 0.119);
-     border-radius: 10px !important;
+     border: 1px solid rgba(0, 0, 0, 0);
+     /* border-radius: 10px !important; */
+     
 }
 
 table {
-    max-width: 80%;
+    max-width: 800px;
     border-collapse: collapse;
-    margin: 0;
-    padding: 0;
+    /* margin: 0; */
+    /* padding: 0; */
     background-color: white;
     /* z-index: -1; */
+    
 }
 
 th,
 td {
     padding: 0.5rem;
-    text-align: left;
+    /* text-align: left; */
     border-bottom: 1px solid #e2e8f0;
     text-align: center;
 }
