--- a/css/academics.menubtn.css
+++ b/css/academics.menubtn.css
@@ -27,6 +27,7 @@
             text-align: center;
             /* color: #f2f2f200; */
             /* width: 100%; */
+        
 
         }
 
@@ -43,35 +44,10 @@
             /*the button visibility*/
             position: relative;
             background-color: #000000c5;
+            /* z-index: 0; */
 
         }
     
-
-        /* ------------------------------------------- */
-
-
-        
-        /* body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #333;
-            color: #fff;
-        } */
-
-        .container-5 {
-
-            border-radius: 15px;
-            padding: 25px;
-            margin: 20px auto;
-            width: 79%;
-            max-width: 800px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            /*the button visibility*/
-            position: relative;
-            background-color: #000000c5;
-
-        }
 
         .drive-link-5 {
             margin-bottom: 20px;
