--- a/css/home.css
+++ b/css/home.css
@@ -214,7 +214,7 @@ td {
 #link-5:hover {
     font-weight: bold;
     background-color: yellow;
-    color: black !important;
+    color: black;
     transition: transform 0.3s ease;
     transform: scale(1.1);
     border: 1px solid black;
