--- a/css/styles.css
+++ b/css/styles.css
@@ -921,7 +921,7 @@ now Browse Curated Resources*/
 
   .randomBS {
     display: block !important;
-    margin-bottom: 100px !important;
+    /* margin-bottom: 100px !important; */
     
   }
 
